--- a/NoSQL-Injection/no-sql-webpage/NO-SQL-Playground/src/views/footer.ejs
+++ b/NoSQL-Injection/no-sql-webpage/NO-SQL-Playground/src/views/footer.ejs
@@ -5,7 +5,7 @@
                 <span class="icon">
                     <i class="fas fa-heart"></i>
                 </span>
-                <span>Secure Website Created By Kya-Kun & Dimas</span>
+                <span></span>
             </p>
         </div>
     </div>
